# local-rag-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  benchmark.py  main.py  pyproject.toml
config/: config.yaml  config.yaml.backup  config.yaml.bak
specs/001-the-rag-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-the-rag-engine/contracts/: chunker_contract.md  engine_contract.md  retriever_contract.md
specs/002-use-langchain-markdownheadertextsplitter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-use-langchain-markdownheadertextsplitter/contracts/: README.md  chunker_interface.md
src/: __init__.py  chunker.py  embedder.py  engine.py  generator.py  retriever.py  sparse_retriever.py  vector_store.py
tests/: __init__.py  ducklake_queries.py  test_chunker.py  test_chunker_contracts.py  test_chunking_quality.py  test_ducklake_retrieval.py  test_embedder.py  test_engine.py  test_new_features_fr011_015.py  test_retriever.py
