[project]
name = "local-rag"
version = "0.1.0"
description = "Minimal RAG Engine with Persistent Storage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mistune>=3.0.0",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "litellm>=1.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub[cli]>=0.35.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
